oc_manifests/example-app1/basic-deployment/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-boot
  namespace: ocp-demo
spec:
  selector:
    matchLabels: 
      app: spring-boot
  replicas: 1
  template:
    metadata:
        labels:
          app: spring-boot
    spec:
      containers:
        - name: hello-springboot
          image: >-
            docker.io/sharon0706/springboot-oc-demo
          ports:
            - containerPort: 8081
              protocol: TCP
            - containerPort: 8082
              protocol: TCP
            - containerPort: 8083
              protocol: TCP  
          resources:
            limits:
              cpu: 930m
              memory: 1120Mi
            requests:
              cpu: 910m
              memory: 1100Mi
      restartPolicy: Always
