oc_manifests/example-app1/basic-deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-springboot
  namespace: ocp-demo
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: 8082-tcp
      protocol: TCP
      port: 8082
      targetPort: 8082
