oc_manifests/example-app1/basic-deployment/deployment.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-springboot
  namespace: ocp-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-springboot
  template:
    metadata:
      labels:
        app: hello-springboot
        app.io/springboot: hello-world
        deploymentconfig: hello-springboot
    spec:
      containers:
        - name: hello-springboot
          image: >-
            docker.io/sharon0706/springboot-oc-demo
          ports:
            - containerPort: 8081
              protocol: TCP
            - containerPort: 8082
              protocol: TCP
            - containerPort: 8083
              protocol: TCP
          resources:
            limits:
              cpu: 930m
              memory: 1120Mi
            requests:
              cpu: 910m
              memory: 1100Mi
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---

kind: Service
apiVersion: v1
metadata:
  name: hello-springboot
  namespace: ocp-demo
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: 8082-tcp
      protocol: TCP
      port: 8082
      targetPort: 8082
  selector:
    app: ocp-demo
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-springboot
  namespace: ocp-demo
spec:
  to:
    kind: Service
    name: hello-springboot
  port:
    targetPort: 8082-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
