oc_manifests/example-app1/basic-deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-springboot
  namespace: ocp-demo
spec:
  to:
    kind: Service
    name: hello-springboot
  port:
    targetPort: 8082-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
